--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,6 +4,18 @@
 
  
 @layer components{
+
+    .login-sucesso{
+        @apply bg-green-500 text-green-700 text-3xl border border-green-700 p-5;
+    }
+
+    .login-erro{
+        @apply bg-red-500 text-red-700 text-3xl border border-red-700 p-5;
+    }
+
+    .login-none{
+        @apply hidden;
+    }
     .cabecalho{
         @apply bg-teal-600 text-white;
 
