Adicionado rodape, favicon.ico e estilizando componente de img na HOME.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -31,6 +31,14 @@
         }
 
     }
+
+    .rodape{
+        @apply bg-teal-600 text-white h-20 fixed w-full bottom-0;
+        & p{
+          @apply w-full text-center p-6;  
+        }
+
+    }
 }
 
 @layer utilities {
